# 3DScanr

./: CONTRIBUTING.md  LICENSE  README.md
Surface_Reconstruction/: ProcessPointCloud.py
Surface_Reconstruction/C_Project/source/pcd_writeRandom/: CMakeLists.txt  pcd_writeRandom.cpp  pcd_writeRandom.h
Surface_Reconstruction/C_Project/source/poisson_recon_test/: CMakeLists.txt  poisson_recon.cpp
Surface_Reconstruction/C_Project/source/test_writeRandom/: CMakeLists.txt  pcd_writeRandom.h  test_writeRandom.cpp
Surface_Reconstruction/data/: All_Points.ply  ChairMesh1.ply  LibChair.ply  LibChairFinal.ply  OttomanLogPoints.txt  backpackLogPoints.txt  backpackPoints.txt  bottleLogPoints2.txt  bottlePoints.txt  chair3LogPoints.txt  chair3Points.txt  chair4LogPoints.txt  chair4Points.txt  chair5LogPoints.txt  chair5Points.txt  chairLogPoints.txt  chairPoints.txt  chauLogPoints.txt  chauPoints.txt  ghoulLogPoints.txt  ghoulPoints.txt  headLogPoints.txt  headPoints.txt  libchair2LogPoints.txt  libchair2Points.txt  libchair3Points.txt  libchair4Logpoints.txt  libchair4Points.txt  oversmoothLibChair.stl  plymcout.d.ply  plymcout.ply  recon1.ply  recon2.ply  smoothLibChair.ply  stevenFirst.ply  stevenLogPoints.txt  stevenPoints.txt  thinker2Points.ply  thinker3Points.ply  thinker3Points.txt  (+3 more)
ThreeDScanner-iOS/: Podfile
ThreeDScanner-iOS/Libraries/: PCLWrapper.cpp  PCLWrapper.hpp  ThreeDScanner-Bridging-Header.h
ThreeDScanner-iOS/ThreeDScanner/: AppDelegate.swift  CameraButton.swift  CapturedImageSampler.swift  Info.plist  (+9 more)
ThreeDScanner-iOS/ThreeDScanner.xcodeproj/: project.pbxproj
ThreeDScanner-iOS/ThreeDScanner.xcworkspace/: contents.xcworkspacedata
(+32 files in other folders)
